@@ -3,7 +3,7 @@
 =for test_synopsis 1;
 __END__
 
-=for stopwords NIGELM 
+=for stopwords NIGELM
 
 =for Pod::Coverage mvp_multivalue_args
 
@@ -13,7 +13,7 @@ Broadworks::OCIP - API for communication with Broadworks OCI-P Interface
 
 =head1 VERSION
 
-version 0.05
+version 0.06
 
 =head1 SYNOPSIS
 
