@@ -33,7 +33,7 @@ extends 'Broadworks::OCIP::Methods';
 1;
 __END__
 
-=for stopwords NIGELM 
+=for stopwords NIGELM
 
 =for Pod::Coverage mvp_multivalue_args
 
