@@ -19,7 +19,7 @@ extends 'Throwable::Error';
 1;
 __END__
 
-=for stopwords NIGELM 
+=for stopwords NIGELM
 
 =for Pod::Coverage mvp_multivalue_args
 
